# sukab-restaurant

./: Cargo.toml  README.md  sukab-restaurant.har
src/: lib.rs  main.rs
src/db/: menu.rs  mod.rs  order.rs
src/db/schema/: order.sql  sukab-restaurant.sql
src/order/: create.rs  delete.rs  detail.rs  list.rs  mod.rs
