[package]
name = "sukab-restaurant"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
actix-web = "4"
rand = "0"
env_logger = "0.11.3"
deadpool-postgres = "0.14.0"
tokio-postgres = { version = "0.7.10", features = ["with-time-0_3"] }
log = "0.4.22"
async-trait = "0.1.81"
time = "0.3.36"
postgres-types = { version = "0.2.6", features = ["derive"] }
postgres-from-row = "0.5.2"
mockall = "0.12.1"
